--- a/index.html
+++ b/index.html
@@ -802,8 +802,8 @@
             $('.owl-carousel').owlCarousel({
                 loop:true,
                 margin: 20,
-                nav:false,
-                dots: true,
+                dots: false,
+                nav: true,
                 responsive:{
                     0:{
                         items:1
