--- a/index.html
+++ b/index.html
@@ -791,8 +791,8 @@
             autoScrolling:true,
             navigation: true,
             anchors: [],
-            navigationTooltips: ['a', 'b', 'c'],
-            showActiveTooltip: false,
+            // navigationTooltips: ['Home', 'Offer', ''],
+            // showActiveTooltip: false,
             scrollingSpeed: 1000,
             controlArrows: false,
             scrollBar:true
