--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
                             <i></i>
                             In our blog we publish useful information connected to real estate topic. We collect people's questions and answer them in articles.
                         </p>
-                        <a class="article-more" href="articles.html">
+                        <a class="article-more" href="list-blogs.html">
                             <span>
                                 Visit Blog
                                 <span class="article-icon">
