--- a/list-blogs.html
+++ b/list-blogs.html
@@ -165,7 +165,7 @@
     <div id="fullPage">
 
         <div id="articles" class="section">
-            <div class="wrapper-article wrapper-container">
+            <div class="wrapper-article page-article wrapper-container">
                 <div class="article-top">
                     <div class="article-left">
                         <span class="article-title">
@@ -188,7 +188,7 @@
                             </div>
                             <div class="article-content">
                                 <div class="article-element">
-                                    <span>Real Estate</span>
+                                    <span class="article-element-three">Real Estate</span>
                                     <span class="article-element-one">Lux house</span>
                                     <span class="article-element-two">Florida</span>
                                 </div>
@@ -214,7 +214,7 @@
                             </div>
                             <div class="article-content">
                                 <div class="article-element">
-                                    <span>Real Estate</span>
+                                    <span class="article-element-three">Real Estate</span>
                                     <span class="article-element-one">Lux house</span>
                                     <span class="article-element-two">Florida</span>
                                 </div>
@@ -240,7 +240,85 @@
                             </div>
                             <div class="article-content">
                                 <div class="article-element">
-                                    <span>Real Estate</span>
+                                    <span class="article-element-three">Real Estate</span>
+                                    <span class="article-element-one">Lux house</span>
+                                    <span class="article-element-two">Florida</span>
+                                </div>
+                                <p class="article-title">
+                                    Hot Markets Delivering Fast Gains
+                                </p>
+                                <p class="article-des">
+                                    Luxury real estate broker Senada Adzem received a phone call from her buyer just 10 days after closing on the $19 million mansion they had just purchasedin Delray Beach.
+                                </p>
+                                <span class="article-more">
+                                    <a href="articles.html">
+                                        Read article
+                                    </a>
+                                    <span class="variant-icon">
+                                        <i class="fa fa-angle-right"></i>
+                                    </span>
+                                </span>
+                            </div>
+                        </div>
+                        <div class="article-item">
+                            <div class="article-images">
+                                <img src="./img/3.jpg" alt="">
+                            </div>
+                            <div class="article-content">
+                                <div class="article-element">
+                                    <span class="article-element-three">Real Estate</span>
+                                    <span class="article-element-one">Lux house</span>
+                                    <span class="article-element-two">Florida</span>
+                                </div>
+                                <p class="article-title">
+                                    Hot Markets Delivering Fast Gains
+                                </p>
+                                <p class="article-des">
+                                    Luxury real estate broker Senada Adzem received a phone call from her buyer just 10 days after closing on the $19 million mansion they had just purchasedin Delray Beach.
+                                </p>
+                                <span class="article-more">
+                                    <a href="articles.html">
+                                        Read article
+                                    </a>
+                                    <span class="variant-icon">
+                                        <i class="fa fa-angle-right"></i>
+                                    </span>
+                                </span>
+                            </div>
+                        </div>
+                        <div class="article-item">
+                            <div class="article-images">
+                                <img src="./img/3.jpg" alt="">
+                            </div>
+                            <div class="article-content">
+                                <div class="article-element">
+                                    <span class="article-element-three">Real Estate</span>
+                                    <span class="article-element-one">Lux house</span>
+                                    <span class="article-element-two">Florida</span>
+                                </div>
+                                <p class="article-title">
+                                    Hot Markets Delivering Fast Gains
+                                </p>
+                                <p class="article-des">
+                                    Luxury real estate broker Senada Adzem received a phone call from her buyer just 10 days after closing on the $19 million mansion they had just purchasedin Delray Beach.
+                                </p>
+                                <span class="article-more">
+                                    <a href="articles.html">
+                                        Read article
+                                    </a>
+                                    <span class="variant-icon">
+                                        <i class="fa fa-angle-right"></i>
+                                    </span>
+                                </span>
+                            </div>
+                        </div>
+                        <div class="article-item">
+                            <div class="article-images">
+                                <img src="./img/3.jpg" alt="">
+                            </div>
+                            <div class="article-content">
+                                <div class="article-element">
+                                    <span class="article-element-three">Real Estate</span>
                                     <span class="article-element-one">Lux house</span>
                                     <span class="article-element-two">Florida</span>
                                 </div>
