--- a/login.html
+++ b/login.html
@@ -169,13 +169,13 @@
                     <div class="form-login">
                         <p class="title-head">Đăng ký</p>
                         <form onSubmit={handleSubmit(onSubmit)}>
-                            <label>Họ và tên<span className="required">*</span></label>
+                            <label>Họ và tên<span class="required">*</span></label>
                             <input name='fullName' type="text" defaultValue="" placeholder="Điền đầy đủ họ tên của bạn..." />
-                            <label>Số điện thoại<span className="required">*</span></label>
+                            <label>Số điện thoại<span class="required">*</span></label>
                             <input name='phone' type="text" defaultValue="" placeholder="Điền số điện thoại của bạn..." />
-                            <label>Họ và tên<span className="required">*</span></label>
+                            <label>Email<span class="required">*</span></label>
                             <input name='fullName' type="text" defaultValue="" placeholder="Điền đầy đủ họ tên của bạn..." />
-                            <label>Số điện thoại<span className="required">*</span></label>
+                            <label>Địa chỉ<span class="required">*</span></label>
                             <input name='phone' type="text" defaultValue="" placeholder="Điền số điện thoại của bạn..." />
                             <div class="group-button">
                                 <button class="btn-dangnhap">
